--- a/src/assets/css/_yy.scss
+++ b/src/assets/css/_yy.scss
@@ -1,18 +1,29 @@
+ %gg{
+    z-index: 130;
+    width: 65px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.49) 15%, rgba(0,0,0,0.8) 25%, #222);
+    opacity: 0.99;
+ }
+ %hl{
+    height: 65px;
+    line-height: 65px;
+ }
  .el-menu {
     border-right: solid 0px #222;
 }
 .el-submenu {
     .el-menu-item {
-        height: 65px;
-        line-height: 65px;
+        @extend %hl;
         padding: 0;
         min-width: 65px;
         padding-left: 0px;
     }
 }
 .el-menu-item {
-    height: 65px;
-    line-height: 65px;
+    @extend %hl;
     &.is-active {
         color: #fff;
         padding-left: 0px;
@@ -20,8 +31,7 @@
     }
 }
 .el-submenu__title {
-    height: 65px;
-    line-height: 65px;
+    @extend %hl;
 }
 .el-menu-item-group__title {
     padding: 0;
